fix padding on mobile

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -52,3 +52,14 @@
   flex-direction: column;
   gap: 2rem;
 }
+
+@media (max-width: 800px) {
+  .page {
+    padding: 2rem;
+    justify-content: center;
+  }
+
+  .content {
+    margin: 0px;
+  }
+}
